examples/test/testpolicy6839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6839
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key31: value35
      key6: value34
      key41: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value45
          key9: value0
          key47: value5
      podSelector:
        matchLabels:
          key20: value47
          key44: value0
          key32: value28
